Regression r130057: Improper preferred width calculation when an inline replaced object, wrapped in an inline flow, follows some text. https://bugs.webkit.org/show_bug.cgi?id=99442

Patch by Arpita Bahuguna <arpitabahuguna@gmail.com> on 2012-11-02
Reviewed by Levi Weintraub.

Source/WebCore:

Extra width is displayed after an inline replaced object that follows some
text (not ending in a whitespace) within an inline-block. This is due to
the end width (endMin) of the text object being carried forward (via inlineMin)
and added onto the next line containing the inline replaced object.

This was caused as a regression to, or rather became apparent post the fix
http://trac.webkit.org/changeset/130057 which fixed the block's preferred
width when a renderInline with width contained an inline replaced object.

Test: fast/block/block-with-inline-replaced-child-following-text.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computeInlinePreferredLogicalWidths):
Introduced another flag (shouldBreakLineAfterText) which is set when
our current Text line (object) does not end in a whitespace, thereby
implying that there could be more text following, for which the end width
needs to be carried forward onto the next line.

In case the following object instead turns out to be an Inline Replaced
object, we should terminate our previous line and reset this extra width.
This is now being handled by checking for the shouldBreakLineAfterText
flag while processing Inline Replaced objects.

Once set, shouldBreakLineAfterText shall be reset only if we get another
Text object that ends in a whitespace, signifying the termination of
that text line. For all other cases, we persist with this flag through
the block's inline contents.

LayoutTests:

* fast/block/block-with-inline-replaced-child-following-text-expected.txt: Added.
* fast/block/block-with-inline-replaced-child-following-text.html: Added.
Test added for verifying the width of the inline-block when an inline replaced
object follows some text object which does not end in a whitespace.

The correct width of our containing box in this case should be 94px which is
determined by the min-width of our text (using ahem font) which is 64px +
the padding - 30px.

Prior to this fix, the trailing end-width from the text (64px) would be carried
onto the next line containing the inline replaced object. This would then make
that line's width as 64px (end width of text) + 30 px (padding) + 50px (width
of our image object) making it 144px in total. This would then incorrectly
define the width of our containing box.

Canonical link: https://commits.webkit.org/119146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133292 268f45cc-cd09-0410-ab3c-d52691b4dbfc